# xtop

./: .gitignore  Cargo.toml  LICENSE  README.md  ztop.txt
src/: app.rs  config.rs  main.rs  ui.rs
themes/: Atom-One-Dark.tmTheme  Default-Dark.tmTheme  Default-Light.tmTheme  Dracula.tmTheme  GitHub-Dark-Color-Blind.tmTheme  GitHub-Dark-Dimmed.tmTheme  GitHub-Dark-High-Contrast.tmTheme  GitHub-Dark.tmTheme  GitHub-Light-Color-Blind.tmTheme  GitHub-Light-High-Contrast.tmTheme  Gruvbox-Dark.tmTheme  Gruvbox-Light.tmTheme  Nord.tmTheme  VS-Code-Dark-Plus.tmTheme  VS-Code-Light-Plus.tmTheme
