[package]
name = "xtop"
version = "0.4.0"
edition = "2021"
license = "MIT"
keywords = ["system", "monitor", "information"]
categories = ["command-line-utilities"]
description = "System monitor written in Rust using terminal user interface (TUI). Fast, efficient, informative, and easy to use."
readme = true
documentation = "https://docs.rs/xtop"
repository = "https://github.com/mabognar/xtop"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
sysinfo = "0.38.4"
default-net = "0.22.0"
rust-embed = "8.0"
dirs = "5.0" # for finding the home directory
syntect = "5.2.0"
ureq = { version = "2.9.1", features = ["json"] }
serde_json = "1.0"
webbrowser = "0.8"

[package.metadata.deb]
maintainer = "Matt Bognar <mattbognar@gmail.com>"
copyright = "2026, Matthew Bognar"
license-file = ["LICENSE", "4"]
depends = "$auto"
extended-description = """
Terminal-based system monitor written in Rust. Fast, efficient, informative, and easy to use.
"""
section = "utility"
priority = "optional"
